# chatv2

./: Cargo.toml  README.md  app.yml  chat.rest  test.rest  user.rest
migrations/: 20241109050703_initial.sql  20241117005106_triggers.sql
rfcs/: rust-learning.md
src/: error.rs  lib.rs  log.rs  main.rs  state.rs
src/adapter/: mod.rs
src/adapter/driven/api/: auth.rs  chats.rs  mod.rs  users.rs
src/adapter/driven/api/middlewares/: chat.rs  mod.rs  token.rs
src/adapter/driven/mq/: mod.rs
src/adapter/driving/db/: chat.rs  user.rs
src/common/: mod.rs
src/common/utils/: mod.rs  token.rs
src/domain/chat/: mod.rs  repo.rs
src/domain/user/: mod.rs  repo.rs
src/service/: auth.rs  chat.rs  file.rs  mod.rs  notif.rs  user.rs
