[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.83"
axum = { version = "0.7.7", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    "macros",
] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.31"
jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust", "superboring"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "2.0.1"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
